code change to remove warnings pointed by FindBugs.